syntax = "proto3";

package proto;

import "google/protobuf/timestamp.proto";

service AuthService {
    rpc Login(LoginRequest) returns (AccessToken){};
    rpc Register(RegisterRequest) returns (User){};
    rpc Verify(AccessToken) returns (User){};
    rpc Refresh(AccessToken) returns (AccessToken){};
}

message User {
    int32 id = 1;
    string username = 2;
    string password = 3;
    google.protobuf.Timestamp created_at = 4;
    google.protobuf.Timestamp updated_at = 5;
}

message AccessToken {
    string token = 1;
}

message LoginRequest {
    string username = 1;
    string password = 2;
}

message RegisterRequest {
    string username = 1;
    string password = 2;
}