syntax = "proto3";

package proto;

import "google/protobuf/timestamp.proto";

service UserService {
    rpc Login(LoginReq) returns (LoginRes){};
    rpc Register(RegisterReq) returns (RegisterRes){};
}

message User {
    int32 id = 1;
    string username = 2;
    string password = 3;
    google.protobuf.Timestamp created_at = 4;
    google.protobuf.Timestamp updated_at = 5;
}

message AccessToken {
    string token = 1;
}

message LoginReq {
    string username = 1;
    string password = 2;
}

message RegisterReq {
    string username = 1;
    string password = 2;
}

message LoginRes {
    bool ok = 1;
    AccessToken data = 2;
}

message RegisterRes {
    bool ok = 1;
    AccessToken data = 2;
}